--- a/neo/doomexe.vcxproj
+++ b/neo/doomexe.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -265,6 +265,7 @@
     <ClInclude Include="sys\win32\win_local.h" />
     <ClInclude Include="sys\win32\rc\doom_resource.h" />
     <ClInclude Include="sys\win32\win_localuser.h" />
+    <ClInclude Include="sys\win32\win_nanoafx.h" />
     <ClInclude Include="sys\win32\win_signin.h" />
     <ClInclude Include="ui\BindWindow.h" />
     <ClInclude Include="ui\ChoiceWindow.h" />
