--- a/neo/doomexe.vcxproj.filters
+++ b/neo/doomexe.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="CM">
@@ -536,6 +536,9 @@
     </ClInclude>
     <ClInclude Include="renderer\GLMatrix.h">
       <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="sys\win32\win_nanoafx.h">
+      <Filter>Sys\Win32</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
